# SimpleTools

./: .gitignore  HERMES_USER_TOOLS.md  Makefile  README.md  USER_TOOLS.md  pyproject.toml
.agents/skills/python-anti-patterns/: SKILL.md
.agents/skills/python-type-safety/: SKILL.md
.cursor/rules/: python-skills-enforcement.mdc
.github/workflows/: ci.yml  publish.yml
simpletools/: __init__.py  cli.py  context.py  file_safety.py  fuzzy_patch.py  http_client.py  memory_store.py  registry.py  runner.py  store.py  v4a_patch.py
simpletools/responses/: __init__.py  models.py
simpletools/tools/: __init__.py  browser.py  clarify.py  cronjob.py  delegate.py  execute_code.py  file_ops.py  honcho_tools.py  memory_tool.py  messaging.py  session_search_tool.py  skills_tools.py  terminal.py  todo_tool.py  vision.py  web.py
tests/: test_smoke.py
